@@ -1,3 +1,9 @@
+2004-02-28  Mark Kettenis  <kettenis@gnu.org>
+
+	* tui/tui.c: Include <readline/readline.h> instead of
+	"readline/readline.h".  Include it after <term.h> and
+	"gdb_curses.h".
+
 2004-02-27  Andrew Cagney  <cagney@redhat.com>
 
 	* hppa-tdep.c (hppa_gdbarch_init): On 32-bit systems always use
